@@ -2,13 +2,16 @@ TODO
     defaultconfig.php?
     translation-hints
     uploader localization from back-end
-    update to newest Plupload/jquery
+
     document for developers: uploaders config.php and LANG.php has to be loaded before init.php
     document usage of uploader() (params are not safe!)
+    no config of exts from back-end
+    more error messages
 
 Version 1alpha5 - released TODO
 cmb	updated to Plupload 1.5.3
 cmb	updated to jQuery 1.7.2
+cmb	added error message, if JS is disabled
 
 Version 1alpha4 - internally released 2012-04-07
 cmb	added function that can be called from a CMSimple page
